--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -9,8 +9,28 @@
   z-index: 0;
   background: $neutral-200;
 
+  @include for-tablet {
+    flex-direction: column-reverse;
+    padding: 0;
+  }
+  @include for-phoneL {
+    padding-bottom: 52px;
+  }
+
   .content-block {
     max-width: 28em;
+    @include for-laptopL {
+      max-width: 36em;
+    }
+    @include for-laptop {
+      max-width: 40em;
+    }
+    @include for-tablet {
+      max-width: 100%;
+      padding-inline: 52px;
+      padding-bottom: 6rem;
+      text-align: center;
+    }
 
     h1 {
       @extend %heading-1;
@@ -20,6 +40,9 @@
       @extend %paragraph-1;
       color: $neutral-400;
       padding-block: 3rem;
+      @include for-tablet {
+        padding-block: 22px;
+      }
     }
   }
 
@@ -35,6 +58,22 @@
         height: 100%;
         object-fit: cover;
       }
+
+      @include for-laptopL {
+        width: 88vw;
+        top: -22vh;
+        right: -20vw;
+      }
+      @include for-tablet {
+        width: 160vw;
+        top: -20vh;
+        right: -55vw;
+      }
+
+      @include for-phoneL {
+        top: -6vh;
+        right: -60vw;
+      }
     }
 
     .front-illustration {
@@ -47,6 +86,15 @@
         width: 100%;
         height: 100%;
       }
+
+      @include for-tablet {
+        width: 100%;
+        margin-right: 0;
+        margin-top: -10rem;
+      }
+      @include for-phoneL {
+        margin-top: -5rem;
+      }
     }
   }
 }
@@ -58,6 +106,11 @@
   z-index: 0;
   background: $neutral-300;
 
+  @include for-tablet {
+    padding: 52px;
+    text-align: center;
+  }
+
   h2 {
     @extend %heading-2;
     color: $primary-100;
@@ -67,28 +120,55 @@
     @extend %paragraph-1;
     color: $neutral-400;
     padding-block: 3rem 5rem;
+
+    @include for-tablet {
+      max-width: 100%;
+      padding-block: 20px 52px;
+    }
   }
 
   .cards-block {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 7.7rem;
+    @include for-laptopL {
+      gap: 3.5rem;
+    }
+    @include for-tablet {
+      grid-template-columns: 1fr;
+    }
 
     .card-content {
+      @include for-tablet {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
       .card-img {
         height: 4.5rem;
         width: 4.5rem;
         aspect-ratio: 1;
+
+        @include for-tablet {
+          height: 48px;
+          width: 48px;
+        }
       }
 
       h3 {
         @extend %heading-3;
         color: $primary-100;
         padding-top: 2rem;
+        @include for-tablet {
+          padding-top: 12px;
+        }
       }
       p {
         padding-top: 2rem;
         padding-bottom: 0;
+        @include for-tablet {
+          padding-top: 12px;
+        }
       }
     }
   }
@@ -100,17 +180,26 @@
   height: auto;
   z-index: 0;
   background: $neutral-200;
+  @include for-tablet {
+    padding: 52px;
+  }
 
   h2 {
     @extend %heading-2;
     color: $primary-100;
     padding-bottom: 4rem;
+    @include for-tablet {
+      padding-bottom: 52px;
+    }
   }
 
   .articles-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
+    @include for-tablet {
+      grid-template-columns: 1fr;
+    }
 
     .article-block {
       background: $neutral-100;
@@ -127,11 +216,23 @@
           height: 100%;
           object-fit: cover;
         }
+
+        @include for-tablet {
+          width: 100%;
+        }
       }
 
       .article-body {
         padding: 2rem;
         max-width: 20.5em;
+        @include for-laptopL {
+          max-width: 100%;
+          padding: 1.2rem;
+        }
+        @include for-tablet {
+          padding: 20px;
+        }
+
         p {
           @extend %paragraph-2;
           font-weight: 400;
