--- a/src/pages/partials/header.hbs
+++ b/src/pages/partials/header.hbs
@@ -15,5 +15,15 @@
     </ul>
   </nav>
 
-  <a href="#" class="btn">Request Invite</a>
+  <a href="#" class="btn nav-btn">Request Invite</a>
+
+  <button type="button" aria-label="open menu" class="burger-menu"><img
+      src="../../assets/icon-hamburger.svg"
+      alt=""
+    /></button>
+
+  <button type="button" aria-label="close menu" class="close-menu"><img
+      src="../../assets/icon-close.svg"
+      alt=""
+    /></button>
 </header>
