--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -6,11 +6,20 @@
   background: $primary-100;
   display: grid;
   grid-template-columns: 0.8fr 1fr 1fr;
+  @include for-tablet {
+    padding: 52px;
+    grid-template-columns: 1fr;
+    text-align: center;
+    gap: 30px;
+  }
 
   .social-block {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    @include for-tablet {
+      gap: 20px;
+    }
 
     .logo-img {
       img {
@@ -26,6 +35,9 @@
         display: flex;
         align-items: center;
         gap: 14px;
+        @include for-tablet {
+          justify-content: center;
+        }
         li {
           transition: 0.3s;
           a {
@@ -57,6 +69,10 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 1.2rem;
+
+      @include for-tablet {
+        grid-template-columns: 1fr;
+      }
       li {
         a {
           transition: 0.3s;
@@ -81,6 +97,11 @@
     justify-content: space-between;
     align-items: flex-end;
     height: 100%;
+
+    @include for-tablet {
+      align-items: center;
+      gap: 20px;
+    }
     p {
       @extend %paragraph-2;
       font-weight: 300;
