--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -10,9 +10,28 @@
   justify-content: space-between;
   background: $neutral-100;
   padding-inline: 10.63rem;
+  @include for-tabletS {
+    height: 64px;
+    padding-inline: 52px;
+  }
+  @include for-phoneL {
+    padding-inline: 32px;
+  }
 
   .navigation {
     height: 100%;
+    opacity: 1;
+    @include for-tabletS {
+      position: fixed;
+      height: calc(100vh - 64px);
+      width: 100vw;
+      bottom: 0;
+      left: 0;
+      z-index: 1;
+      background: rgba(#000000, 0.6);
+      transition: 0.4s;
+      opacity: 0;
+    }
 
     ul {
       display: flex;
@@ -21,10 +40,29 @@
       margin: 0;
       gap: 22px;
       height: 100%;
+      transition: 0.5s;
+
+      @include for-tabletS {
+        background: $neutral-100;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 25px;
+        height: fit-content;
+        margin: 52px;
+        border-radius: 3px;
+        padding-block: 52px;
+        transform: translateY(-150%);
+      }
+      @include for-phoneL {
+        margin: 32px;
+        padding-block: 32px;
+      }
       li {
         height: 100%;
         border-bottom: 5px solid transparent;
         transition: 0.3s;
+
         a {
           transition: 0.3s;
           height: 100%;
@@ -32,6 +70,11 @@
           align-items: center;
           @extend %paragraph-1;
           color: $neutral-400;
+
+          @include for-tabletS {
+            justify-content: center;
+            font-size: 20px;
+          }
         }
 
         &:hover {
@@ -51,6 +94,53 @@
         border-image: $linear-gradient-100;
         border-image-slice: 1;
         width: 100%;
+      }
+    }
+  }
+
+  .nav-btn {
+    @include for-tabletS {
+      display: none;
+    }
+  }
+
+  .burger-menu {
+    display: none;
+    @include for-tabletS {
+      display: flex;
+      height: 48px;
+      width: 48px;
+      border: none;
+      background: transparent;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+
+  .active-nav-container {
+    @include for-tabletS {
+      opacity: 1;
+    }
+  }
+  .active-nav-menu {
+    @include for-tabletS {
+      transform: translateY(0%) !important;
+    }
+  }
+
+  .close-menu {
+    display: none;
+    @include for-tabletS {
+      display: none;
+      height: 28px;
+      width: 28px;
+      border: none;
+      background: transparent;
+      img {
+        width: 100%;
+        height: 100%;
       }
     }
   }
