fix header, footer image source

--- a/src/pages/partials/footer.hbs
+++ b/src/pages/partials/footer.hbs
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="social-block">
     <figure class="logo-img"><img
-        src="../../assets/logo-inverted.svg"
+        src="./assets/logo-inverted.svg"
         alt="easybank logo"
       /></figure>
 
