--- a/src/pages/partials/header.hbs
+++ b/src/pages/partials/header.hbs
@@ -1,6 +1,6 @@
 <header class="header">
   <a href="/"><img
-      src="../../assets/logo.svg"
+      src="./assets/logo.svg"
       alt="easybank logo"
       aria-label="homepage"
     /></a>
@@ -18,12 +18,12 @@
   <a href="#" class="btn nav-btn">Request Invite</a>
 
   <button type="button" aria-label="open menu" class="burger-menu"><img
-      src="../../assets/icon-hamburger.svg"
+      src="./assets/icon-hamburger.svg"
       alt=""
     /></button>
 
   <button type="button" aria-label="close menu" class="close-menu"><img
-      src="../../assets/icon-close.svg"
+      src="./assets/icon-close.svg"
       alt=""
     /></button>
 </header>
